# django_dans_api_toolkit

./: .coveragerc  .flake8  .gitignore  AUTHORS  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  TODO.md  demo_logging.py  manage.py  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg
.github/: mypy.ini  pull_request_template.md
.github/workflows/: detect-version.yml  lint.yml  python-lint.yml  python-test.yml  python-types.yml  release.yml  test-python.yml
django_dans_api_toolkit/: api_response.py  api_response_handler.py  api_response_renderer.py  apps.py
django_dans_api_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_dans_api_toolkit/serializers/: base.py  base.pyi
django_dans_api_toolkit/test/: settings.py  test_api_response.py  test_api_response_handler.py  test_api_response_renderer.py
django_dans_api_toolkit/test/serializers/: models.py  test_base_serializer.py
docs/: release.md  tools.md
