[metadata]
name = django-dans-api-toolkit
version = 1.0.0
description = A Django app to help make building APIs great.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/dan1229/django_dans_api_toolkit
author = Daniel Nazarian
author_email = dnaz@danielnazarian.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
include_package_data = true
python_requires = >=3.10
install_requires =
    Django >= 5.0
    djangorestframework >= 3.14.0

[options.package_data]
django_dans_api_toolkit = py.typed